--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
                 <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Phone</th>
-                        <th scope="col">type</th>
-                        <th scope="col">Downloads</th>
+                        <th scope="col">PHONE</th>
+                        <th scope="col">TYPE</th>
+                        <th scope="col">DOWNLOADS</th>
                     </tr>
                 </thead>
                 <tbody>
