--- a/index.html
+++ b/index.html
@@ -426,7 +426,9 @@
                 </div>
             </section>
 
+
             <!-- Two -->
+            <!-- 
             <section id="two" class="wrapper style2 special">
                 <div class="container">
                     <header class="major">
@@ -466,9 +468,10 @@
                         </ul>
                     </footer>
                 </div>
-            </section>
+            </section> -->
 
             <!-- Three -->
+            <!--
             <section id="three" class="wrapper style3 special">
                 <div class="container">
                     <header class="major">
@@ -496,7 +499,7 @@
                         </div>
                     </form>
                 </div>
-            </section>
+            </section>-->
 
             <!-- Footer -->
             <footer id="footer">
