--- a/index.html
+++ b/index.html
@@ -324,109 +324,107 @@
                                                     <td>driver</td>
                                                     <td><a href=""> Download</a></td>
                                                     <tr>
-                                                        <!--  <th scope="row">9</th>
-                                                        <td>Htc</td>
-                                                        <td>driver</td>
-                                                        <td><a href=""> Download</a></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">10</th>
-                                                        <td>Kyocera</td>
-                                                        <td>driver</td>
-                                                        <td><a href=""> Download</a></td>
--->
+
                 </tbody>
             </table>
-            <!--
-            <br>
-            <h2>Unlock Tools</h2>
-            <p class="text-danger">Those tools Are free we are not responsible for breaking any phone Use them at your own Risk!!!.</p>
-            <p class="text-danger">Those ones that have Password Protected, you can contact me for password!!!</p>
-            <table class="table table-striped ">
-                <thead>
+
+            <h2 class="#">SmartPhones Drivers</h2>
+            <p class="text-danger">Those tools Are free we are not responsible for breaking any phone Use them at your own Risk!!!</p>
+            <tbody>
+                <tr>
+                    <td>Samsung</td>
+                    <td>FSJHSJ</td>
+                    <td>Samsung</td>
+                    <td>driver</td>
+                    <td><a href=""> Download</a></td>
+                </tr>
+                <tr>
+                    <td>Samsung</td>
+                    <td>SamsJSHH</td>
+                    <td>LG</td>
+                    <td>driver</td>
+                    <td><a href=""> Download</a></td>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Phone</th>
-                        <th scope="col">type</th>
-                        <th scope="col">Downloads</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
                         <td>Samsung</td>
+                        <td>Samsung</td>
+                        <td>Motorola</td>
                         <td>driver</td>
                         <td><a href=""> Download</a></td>
                     </tr>
                     <tr>
-                        <th scope="row">2</th>
-                        <td>LG</td>
+                        <td>Samsung</td>
+                        <td>Samsung</td>
+                        <td>Zte</td>
                         <td>driver</td>
                         <td><a href=""> Download</a></td>
                         <tr>
-                            <th scope="row">3</th>
-                            <td>Motorola</td>
+                            <td>Samsung</td>
+                            <td>Samsung</td>
+                            <td>Sony</td>
                             <td>driver</td>
                             <td><a href=""> Download</a></td>
                         </tr>
                         <tr>
-                            <th scope="row">4</th>
-                            <td>Zte</td>
+                            <td>Samsung</td>
+                            <td>Samsung</td>
+                            <td>Huawei</td>
                             <td>driver</td>
                             <td><a href=""> Download</a></td>
                             <tr>
-                                <th scope="row">5</th>
-                                <td>Sony</td>
+                                <td>Samsung</td>
+                                <td>Samsung</td>
+                                <td>Alcatel</td>
                                 <td>driver</td>
                                 <td><a href=""> Download</a></td>
                             </tr>
                             <tr>
-                                <th scope="row">6</th>
-                                <td>Huawei</td>
+                                <td>Samsung</td>
+                                <td>Samsung</td>
+                                <td>Coolpad</td>
                                 <td>driver</td>
                                 <td><a href=""> Download</a></td>
                                 <tr>
-                                    <th scope="row">7</th>
-                                    <td>Alcatel</td>
+                                    <td>Samsung</td>
+                                    <td>Samsung</td>
+                                    <td>Htc</td>
                                     <td>driver</td>
                                     <td><a href=""> Download</a></td>
-    </section>-->
+                                </tr>
+                                <tr>
+                                    <td>Samsung</td>
+                                    <td>Samsung</td>
+                                    <td>Kyocera</td>
+                                    <td>driver</td>
+                                    <td><a href=""> Download</a></td>
+                                    <tr>
+                                        <td>Samsung</td>
+                                        <td>Samsung</td>
+                                        <td>Mediatek</td>
+                                        <td>driver</td>
+                                        <td><a href=""> Download</a></td>
+                                        <tr>
+                                            <td>Samsung</td>
+                                            <td>Samsung</td>
+                                            <td>Spd</td>
+                                            <td>driver</td>
+                                            <td><a href=""> Download</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Samsung</td>
+                                            <td>Samsung</td>
+                                            <td>Android(ABD)</td>
+                                            <td>driver</td>
+                                            <td><a href=""> Download</a></td>
+                                            <tr>
+                                                <td>Samsung</td>
+                                                <td>Samsung</td>
+                                                <td>Qualcomm</td>
+                                                <td>driver</td>
+                                                <td><a href=""> Download</a></td>
+                                                <tr>
 
-            <!-- One -->
-            <section id="one" class="wrapper style1 special">
-                <div class="container">
-                    <header class="major">
-                        <h2>we offer these services</h2>
-                        <p>Unlocking Cellphone is so easy as you cannot imagine!</p>
-                    </header>
-                    <div class="row 150%">
-                        <div class="4u 12u$(medium)">
-                            <section class="box">
-                                <i class="icon big rounded color1 fa-unlock"></i>
-                                <h3>Network Unlock</h3>
-                                <p>We unlock any gsm Carrier
-                                </p>
-                            </section>
-                        </div>
-                        <div class="4u 12u$(medium)">
-                            <section class="box">
-                                <i class="icon big rounded color9 fa-tablet"></i>
-                                <h3>Frp Removal</h3>
-                                <p>Any model any version supported</p>
-                            </section>
-                        </div>
-                        <div class="4u$ 12u$(medium)">
-                            <section class="box">
-                                <i class="icon big rounded color6 fa-globe"></i>
-                                <h3>Remote Unlock</h3>
-                                <p>Unlock your cellphone remotely</p>
-                            </section>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
+            </tbody>
+            </table>
             <!-- Two -->
             <!-- 
             <section id="two" class="wrapper style2 special">
