--- a/index.html
+++ b/index.html
@@ -327,106 +327,148 @@
 
                 </tbody>
             </table>
+        </div>
+    </section>
+    <!-- One -->
+    <section id="one" class="wrapper style1 special">
+        <div class="container">
+            <header class="major">
+                <h2>we offer these services</h2>
+                <p>Unlocking Cellphone is so easy as you cannot imagine!</p>
+            </header>
+            <div class="row 150%">
+                <div class="4u 12u$(medium)">
+                    <section class="box">
+                        <i class="icon big rounded color1 fa-unlock"></i>
+                        <h3>Network Unlock</h3>
+                        <p>We unlock any gsm Carrier
+                        </p>
+                    </section>
+                </div>
+                <div class="4u 12u$(medium)">
+                    <section class="box">
+                        <i class="icon big rounded color9 fa-tablet"></i>
+                        <h3>Frp Removal</h3>
+                        <p>Any model any version supported</p>
+                    </section>
+                </div>
+                <div class="4u$ 12u$(medium)">
+                    <section class="box">
+                        <i class="icon big rounded color6 fa-globe"></i>
+                        <h3>Remote Unlock</h3>
+                        <p>Unlock your cellphone remotely</p>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section id="one" class="wrapper style1 special">
+        <div class="container">
             <h2 class="#">SmartPhones Drivers</h2>
             <p class="text-danger">Those tools Are free we are not responsible for breaking any phone Use them at your own Risk!!!</p>
-            <tbody>
-                <tr>
-                    <td>Samsung</td>
-                    <td>FSJHSJ</td>
-                    <td>Samsung</td>
-                    <td>driver</td>
-                    <td><a href=""> Download</a></td>
-                </tr>
-                <tr>
-                    <td>Samsung</td>
-                    <td>SamsJSHH</td>
-                    <td>LG</td>
-                    <td>driver</td>
-                    <td><a href=""> Download</a></td>
+
+            <table class="table table-striped ">
+                <tbody>
                     <tr>
                         <td>Samsung</td>
+                        <td>FSJHSJ</td>
                         <td>Samsung</td>
-                        <td>Motorola</td>
                         <td>driver</td>
                         <td><a href=""> Download</a></td>
                     </tr>
                     <tr>
                         <td>Samsung</td>
-                        <td>Samsung</td>
-                        <td>Zte</td>
+                        <td>SamsJSHH</td>
+                        <td>LG</td>
                         <td>driver</td>
                         <td><a href=""> Download</a></td>
                         <tr>
                             <td>Samsung</td>
                             <td>Samsung</td>
-                            <td>Sony</td>
+                            <td>Motorola</td>
                             <td>driver</td>
                             <td><a href=""> Download</a></td>
                         </tr>
                         <tr>
                             <td>Samsung</td>
                             <td>Samsung</td>
-                            <td>Huawei</td>
+                            <td>Zte</td>
                             <td>driver</td>
                             <td><a href=""> Download</a></td>
                             <tr>
                                 <td>Samsung</td>
                                 <td>Samsung</td>
-                                <td>Alcatel</td>
+                                <td>Sony</td>
                                 <td>driver</td>
                                 <td><a href=""> Download</a></td>
                             </tr>
                             <tr>
                                 <td>Samsung</td>
                                 <td>Samsung</td>
-                                <td>Coolpad</td>
+                                <td>Huawei</td>
                                 <td>driver</td>
                                 <td><a href=""> Download</a></td>
                                 <tr>
                                     <td>Samsung</td>
                                     <td>Samsung</td>
-                                    <td>Htc</td>
+                                    <td>Alcatel</td>
                                     <td>driver</td>
                                     <td><a href=""> Download</a></td>
                                 </tr>
                                 <tr>
                                     <td>Samsung</td>
                                     <td>Samsung</td>
-                                    <td>Kyocera</td>
+                                    <td>Coolpad</td>
                                     <td>driver</td>
                                     <td><a href=""> Download</a></td>
                                     <tr>
                                         <td>Samsung</td>
                                         <td>Samsung</td>
-                                        <td>Mediatek</td>
+                                        <td>Htc</td>
+                                        <td>driver</td>
+                                        <td><a href=""> Download</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Samsung</td>
+                                        <td>Samsung</td>
+                                        <td>Kyocera</td>
                                         <td>driver</td>
                                         <td><a href=""> Download</a></td>
                                         <tr>
                                             <td>Samsung</td>
                                             <td>Samsung</td>
-                                            <td>Spd</td>
-                                            <td>driver</td>
-                                            <td><a href=""> Download</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Samsung</td>
-                                            <td>Samsung</td>
-                                            <td>Android(ABD)</td>
+                                            <td>Mediatek</td>
                                             <td>driver</td>
                                             <td><a href=""> Download</a></td>
                                             <tr>
                                                 <td>Samsung</td>
                                                 <td>Samsung</td>
-                                                <td>Qualcomm</td>
+                                                <td>Spd</td>
+                                                <td>driver</td>
+                                                <td><a href=""> Download</a></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Samsung</td>
+                                                <td>Samsung</td>
+                                                <td>Android(ABD)</td>
                                                 <td>driver</td>
                                                 <td><a href=""> Download</a></td>
                                                 <tr>
+                                                    <td>Samsung</td>
+                                                    <td>Samsung</td>
+                                                    <td>Qualcomm</td>
+                                                    <td>driver</td>
+                                                    <td><a href=""> Download</a></td>
+                                                    <tr>
 
-            </tbody>
+                </tbody>
             </table>
-            <!-- Two -->
-            <!-- 
+        </div>
+    </section>
+
+    <!-- Two -->
+    <!-- 
             <section id="two" class="wrapper style2 special">
                 <div class="container">
                     <header class="major">
@@ -468,8 +510,8 @@
                 </div>
             </section> -->
 
-            <!-- Three -->
-            <!--
+    <!-- Three -->
+    <!--
             <section id="three" class="wrapper style3 special">
                 <div class="container">
                     <header class="major">
@@ -499,82 +541,82 @@
                 </div>
             </section>-->
 
-            <!-- Footer -->
-            <footer id="footer">
-                <div class="container">
-                    <section class="links">
-                        <div class="row">
-                            <section class="3u 6u(medium) 12u$(small)">
-                                <h3>Privacy</h3>
-                                <ul class="unstyled">
-                                    <li><a href="#">Lorem ipsum dolor sit</a></li>
-                                    <li><a href="#">Nesciunt itaque, alias possimus</a></li>
-                                    <li><a href="#">Optio rerum beatae autem</a></li>
-                                    <li><a href="#">Nostrum nemo dolorum facilis</a></li>
-                                    <li><a href="#">Quo fugit dolor totam</a></li>
-                                </ul>
-                            </section>
-                            <section class="3u 6u$(medium) 12u$(small)">
-                                <h3>Policy</h3>
-                                <ul class="unstyled">
-                                    <li><a href="#">Lorem ipsum dolor sit</a></li>
-                                    <li><a href="#">Reiciendis dicta laboriosam enim</a></li>
-                                    <li><a href="#">Corporis, non aut rerum</a></li>
-                                    <li><a href="#">Laboriosam nulla voluptas, harum</a></li>
-                                    <li><a href="#">Facere eligendi, inventore dolor</a></li>
-                                </ul>
-                            </section>
-                            <section class="3u 6u(medium) 12u$(small)">
-                                <h3>About Us</h3>
-                                <ul class="unstyled">
-                                    <li><a href="#">Lorem ipsum dolor sit</a></li>
-                                    <li><a href="#">Distinctio, inventore quidem nesciunt</a></li>
-                                    <li><a href="#">Explicabo inventore itaque autem</a></li>
-                                    <li><a href="#">Aperiam harum, sint quibusdam</a></li>
-                                    <li><a href="#">Labore excepturi assumenda</a></li>
-                                </ul>
-                            </section>
-                            <section class="3u$ 6u$(medium) 12u$(small)">
-                                <h3>Contact Us</h3>
-                                <ul class="unstyled">
-                                    <li><a href="#">Lorem ipsum dolor sit</a></li>
-                                    <li><a href="#">Recusandae, culpa necessita nam</a></li>
-                                    <li><a href="#">Cupiditate, debitis adipisci blandi</a></li>
-                                    <li><a href="#">Tempore nam, enim quia</a></li>
-                                    <li><a href="#">Explicabo molestiae dolor labore</a></li>
-                                </ul>
-                            </section>
-                        </div>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="container">
+            <section class="links">
+                <div class="row">
+                    <section class="3u 6u(medium) 12u$(small)">
+                        <h3>Privacy</h3>
+                        <ul class="unstyled">
+                            <li><a href="#">Lorem ipsum dolor sit</a></li>
+                            <li><a href="#">Nesciunt itaque, alias possimus</a></li>
+                            <li><a href="#">Optio rerum beatae autem</a></li>
+                            <li><a href="#">Nostrum nemo dolorum facilis</a></li>
+                            <li><a href="#">Quo fugit dolor totam</a></li>
+                        </ul>
                     </section>
-                    <div class="row">
-                        <div class="8u 12u$(medium)">
-                            <ul class="copyright">
-                                <li>&copy; Deblokemvit. All rights reserved.</li>
-                                <li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-                                <li>Images: <a href="http://unsplash.com">Unsplash</a></li>
-                            </ul>
-                        </div>
-
-                        <div id="follow" class="4u$ 12u$(medium)">
-                            <ul class="icons">
-                                <li>
-                                    <a class="icon rounded fa-facebook" href="https://web.facebook.com/deblokemvit" target="_blank"><span class="label">Facebook</span></a>
-                                </li>
-                                <li>
-                                    <a class="icon rounded fa-twitter"><span class="label">Twitter</span></a>
-                                </li>
-                                <li>
-                                    <a class="icon rounded fa-instagram"> <span class="label">Instagram</span></a>
-                                </li>
-                                <li>
-                                    <a class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a>
-
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                    <section class="3u 6u$(medium) 12u$(small)">
+                        <h3>Policy</h3>
+                        <ul class="unstyled">
+                            <li><a href="#">Lorem ipsum dolor sit</a></li>
+                            <li><a href="#">Reiciendis dicta laboriosam enim</a></li>
+                            <li><a href="#">Corporis, non aut rerum</a></li>
+                            <li><a href="#">Laboriosam nulla voluptas, harum</a></li>
+                            <li><a href="#">Facere eligendi, inventore dolor</a></li>
+                        </ul>
+                    </section>
+                    <section class="3u 6u(medium) 12u$(small)">
+                        <h3>About Us</h3>
+                        <ul class="unstyled">
+                            <li><a href="#">Lorem ipsum dolor sit</a></li>
+                            <li><a href="#">Distinctio, inventore quidem nesciunt</a></li>
+                            <li><a href="#">Explicabo inventore itaque autem</a></li>
+                            <li><a href="#">Aperiam harum, sint quibusdam</a></li>
+                            <li><a href="#">Labore excepturi assumenda</a></li>
+                        </ul>
+                    </section>
+                    <section class="3u$ 6u$(medium) 12u$(small)">
+                        <h3>Contact Us</h3>
+                        <ul class="unstyled">
+                            <li><a href="#">Lorem ipsum dolor sit</a></li>
+                            <li><a href="#">Recusandae, culpa necessita nam</a></li>
+                            <li><a href="#">Cupiditate, debitis adipisci blandi</a></li>
+                            <li><a href="#">Tempore nam, enim quia</a></li>
+                            <li><a href="#">Explicabo molestiae dolor labore</a></li>
+                        </ul>
+                    </section>
                 </div>
-            </footer>
+            </section>
+            <div class="row">
+                <div class="8u 12u$(medium)">
+                    <ul class="copyright">
+                        <li>&copy; Deblokemvit. All rights reserved.</li>
+                        <li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+                        <li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+                    </ul>
+                </div>
+
+                <div id="follow" class="4u$ 12u$(medium)">
+                    <ul class="icons">
+                        <li>
+                            <a class="icon rounded fa-facebook" href="https://web.facebook.com/deblokemvit" target="_blank"><span class="label">Facebook</span></a>
+                        </li>
+                        <li>
+                            <a class="icon rounded fa-twitter"><span class="label">Twitter</span></a>
+                        </li>
+                        <li>
+                            <a class="icon rounded fa-instagram"> <span class="label">Instagram</span></a>
+                        </li>
+                        <li>
+                            <a class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a>
+
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
