--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <li><a href="https://api.whatsapp.com/send?phone=50948402740&fbclid=IwAR0KfK4_nocDNsDevnUe-U5tdwwAs4mTPjPp4TfsmR-zumKDxeEyYIWWaqY" target="_blank">Contact Us</a></li>
                 <li><a href="https://bit.ly/375r0Ha" alt="_blank">Aprann Dekode telefon</a></li>
                 <li><a href="https://www.youtube.com/channel/UCtQeR3BnSgwJt4vkQJS_sFg/videos" target="_blank">My YouTube Channel</a></li>
-                <!-- <li><a href="generic.html">Generic</a></li>
-                <li><a href="elements.html">Elements</a></li>
+                <li><blockquote class="tiktok-embed" cite="https://www.tiktok.com/@deblokemvit" data-unique-id="deblokemvit" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@deblokemvit?refer=creator_embed">@deblokemvit</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script></li>
+                <!--<li><a href="elements.html">Elements</a></li>
                 <li><a href="#" class="button special">Sign Up</a></li>-->
             </ul>
         </nav>
