--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html">Downloads</a></li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Paid Files</a></li>
                 <li><a href="https://api.whatsapp.com/send?phone=50948402740&fbclid=IwAR0KfK4_nocDNsDevnUe-U5tdwwAs4mTPjPp4TfsmR-zumKDxeEyYIWWaqY" target="_blank">Contact Us</a></li>
                 <li><a href="https://bit.ly/375r0Ha" alt="_blank">Aprann Dekode telefon</a></li>
                 <li><a href="https://www.youtube.com/channel/UCtQeR3BnSgwJt4vkQJS_sFg/videos" target="_blank">My YouTube Channel</a></li>
