--- a/index.html
+++ b/index.html
@@ -124,18 +124,8 @@
                 <li><a href="APK/Test_DPC.apk"><img src="images/icon/testpdc.png" alt="Setting App" width="20" height="20" data-lazy-loaded="1" /> Test_DPC</a></li>
                 <li><a href="APK/Launch Google Settings_v1.0_apkpure.com.apk"><img src="images/icon/gnlsetting.png"Setting App" width="20" height="20" data-lazy-loaded="1" /> Launch Google Now Settings</a></li>
                 <li><a href="APK/google-play-services-14-5-68-000300-217203757.apk"><img src="images/icon/gplservices.png" alt="Setting App" width="20" height="20" data-lazy-loaded="1" /> Google Play Services</a></li>
-                <li><a href="APK/FRP_Android_7.apk"><img src="images/icon/calcula.png" alt="Setting App" width="20" height="20" data-lazy-loaded="1" /> Launch Calculator </a></li>
-                </ul>
-                <h1>Launcher</h1>
-                <br>
-                <ul>
+                <li><a href="APK/FRP_Android_7.apk"><img src="images/icon/calcula.png" alt="Setting App" width="20" height="20" data-lazy-loaded="1" /> Launch Calculator </a></li></ul>
                 <li><a href="APK/Apex_Launcher.apk"><img src="https://img.utdstc.com/icons/apex-launcher-android.png:225" alt="" width="20" height="20" /> Apex_Launcher</a></li>
-                </ul>
-                <h1>Network Band Changer</h1>
-                <ul>
-                <li><a href="APK/LTE:CDMA to GSM.apk"><img src="images/grid-globe-network.png" alt="" width="20" height="20" /> LTE/CDMA to GSM</a></li>
-                <li><a href="APK/LTE:CDMA to GSM.apk"><img src="images/grid-globe-network.png" alt="" width="20" height="20" /> LTE/CDMA to GSM</a>
-                </li>
                 </ul>
             </div>
             <br>
