--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="container">
         <div class="container">
             <header class="major">
-                <h2>Downloads
+                <h2>FRP_BYPASS
                 </h2>
                 <p>you can download all necesary files here to remove FRPLOCK!</p>
                 <hr>
@@ -139,7 +139,7 @@
     <section class="container">
     <div class="container">
     <header class="major">
-    <h2>Unlock, Drivers And FrpTool
+    <h2>DOWNLOADS
     </h2>
     <p>Stay tuned we are workin hard everyday to bring you Useful ToolS</p>
      <hr>
@@ -226,6 +226,7 @@
          </tr>
         </tbody>
         </table>
+        <br>
         <h2>Unlock, Drivers And FrpTool
         </h2>
         <p>Stay tuned we are workin hard everyday to bring you Useful ToolS</p>
@@ -240,13 +241,13 @@
         
         <tbody>
         <tr>
-        <td scope="row">download</td>
+        <td>download</td>
         <td>download</td>
         <td>download</td>
         <td><a href=""> download</a></td>
         </tr>
         <tr>
-        <td scope="row">download</td>
+        <td>download</td>
         <td>download</td>
         <td>download</td>
         <td><a href=""> download</a></td>
@@ -274,11 +275,12 @@
 <td><a href=""> download</a></td>
 <tr>
 </tbody>
-
-            </table>
-        </div>
+</table>
+</div>
     </section>
     <!-- Footer -->
+    <br>
+    <br>
     <footer id="footer">
         <div class="container">
             <section class="links">
