--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html">Downloads</a></li>
                 <li><a href="index.html">Paid Files</a></li>
-                <li><a href="https://bit.ly/375r0Ha" alt="_blank" class="button big">Aprann Dekode</a></li>
+                <li><a href="https://bit.ly/375r0Ha" alt="_blank" >Aprann Dekode</a></li>
                 <li><a href="https://www.youtube.com/channel/UCtQeR3BnSgwJt4vkQJS_sFg/videos" target="_blank">My YouTube Channel</a></li>
                 <li><a href="https://www.tiktok.com/@deblokemvit?is_from_webapp=1&sender_device=pc" target="_blank">My TikTok</a></li>
                 <!--<li><a href="#" class="button special">Sign Up</a></li>-->
@@ -64,7 +64,7 @@
         <p>-Network Unlock -Frp Removal -Remote Unlock Services</p>
         <ul class="actions">
             <li>
-                <a href="https://api.whatsapp.com/send?phone=50948402740&fbclid=IwAR0KfK4_nocDNsDevnUe-U5tdwwAs4mTPjPp4TfsmR-zumKDxeEyYIWWaqY" target="_blank">Contact Us</a>
+                <a href="https://api.whatsapp.com/send?phone=50948402740&fbclid=IwAR0KfK4_nocDNsDevnUe-U5tdwwAs4mTPjPp4TfsmR-zumKDxeEyYIWWaqY" target="_blank" class="button big">Contact Us</a>
             </li>
         </ul>
     </section>
