--- a/index.html
+++ b/index.html
@@ -223,17 +223,10 @@
          </tr>
         </tbody>
         </table>
-        <br>
-        <h2>Unlock, Drivers And FrpTool
-        </h2>
-        <p>Stay tuned we are workin hard everyday to bring you Useful ToolS</p>
-        <hr>
     </header>
     </di>
     <br>
-    <h2 class="#">SmartPhones Drivers</h2>
-    <p class="text-danger">Those tools Are free we are not responsible for breaking any phone Use them at your own Risk!!!</p>
-
+    <h2 class="#">USEFUL LINK!</h2>
     <table class="table table-striped ">
         
         <tbody>
@@ -266,7 +259,7 @@
  <td><a href=""> download</a></td>
  </tr>
  <tr>
- <th scope="row">download</th>
+ <td scope="row">download</td>
  <td>download</td>
  <td>download</td>
 <td><a href=""> download</a></td>
