--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <li><a href="APK/Launch Google Settings_v1.0_apkpure.com.apk"><img src="images/icon/gnlsetting.png"Setting App" width="20" height="20" data-lazy-loaded="1" /><strong><mark style="background-color: rgba(0, 0, 0, 0);" class="has-inline-color has-black-color"></mark>Launch Google Now Settings</a></li>
                 <li><a href="APK/google-play-services-14-5-68-000300-217203757.apk"><img src="images/icon/gplservices.png" alt="Setting App" width="20" height="20" data-lazy-loaded="1" /><strong><mark style="background-color: rgba(0, 0, 0, 0);" class="has-inline-color has-black-color"></mark>Google Play Services</a></li>
                 <li><a href="APK/FRP_Android_7.apk"><img src="images/icon/calcula.png" alt="Setting App" width="20" height="20" data-lazy-loaded="1" /><strong><mark style="background-color: rgba(0, 0, 0, 0);" class="has-inline-color has-black-color"></mark>Launch Calculator </a></li></ul>
-                <li><a href="APK/Apex_Launcher.apk"><img src="https://img.utdstc.com/icons/apex-launcher-android.png:225" alt="" width="20" height="20" /><strong><mark style="background-color: rgba(0, 0, 0, 0);" class="has-inline-color has-black-color"></mark>Apex_Launcher</a></li>
+                <li><a href="APK/Apex_Launcher.apk"><img src="https://img.utdstc.com/icons/apex-launcher-android.png:225" alt="" width="20" data-lazy-loaded="1" height="20" /><strong><mark style="background-color: rgba(0, 0, 0, 0);" class="has-inline-color has-black-color"></mark>Apex_Launcher</a></li>
                 </ul>
             </div>
             <br>
