--- a/index.html
+++ b/index.html
@@ -233,39 +233,20 @@
         
         <tbody>
         <tr>
-        <td>download</td>
-        <td>download</td>
-        <td>download</td>
-        <td><a href=""> download</a></td>
+        <td><a href=""> download</a>download</td>
+        <td><a href=""> download</a>download</td>
+        <td><a href=""> download</a>download</td>
         </tr>
         <tr>
-        <td>download</td>
-        <td>download</td>
-        <td>download</td>
-        <td><a href=""> download</a></td>
+        <td><a href=""> download</a>download</td>
+        <td><a href=""> download</a>download</td>
+        <td><a href=""> download</a>download</td>
          <tr>
- <td scope="row">download</td>
- <td>download</td>
- <td>download</td>
- <td><a href=""> download</a></td>
- </tr>
+        <td><a href=""> download</a>download</td>
+        <td><a href=""> download</a>download</td>
+        <td><a href=""> download</a>download</td>
+        </tr>
  <tr>
-<td scope="row">download</td>
- <td>download</td>
- <td>download</td>
- <td><a href="">doownload</a></td>
-<tr>
-<td scope="row">download</td>
- <td>download</td>
- <td>download</td>
- <td><a href=""> download</a></td>
- </tr>
- <tr>
- <td scope="row">download</td>
- <td>download</td>
- <td>download</td>
-<td><a href=""> download</a></td>
-<tr>
 </tbody>
 </table>
 </div>
