--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <th scope="row">1</th>
     <td>Samsung</td>
     <td>driver</td>
-    <td><a href=""> Download</a></td>
+    <td><a href="DRIVERS/SAMSUNG_USB_Driver_for_Mobile_Phones.exe"> Download</a></td>
     </tr>
  <tr>
        <th scope="row">2</th>
@@ -172,7 +172,7 @@
         <th scope="row">3</th>
         <td>Motorola</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/Motorola_Mobile_Drivers_64bit.msi"> Download</a></td>
         </tr>
         <tr>
         <th scope="row">4</th>
