all change are Oke
all drivers

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <nav id="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Downloads</a></li>
+                <li><a href="download#1">Downloads</a></li>
                 <li><a href="index.html">Paid Files</a></li>
                 <li><a href="https://bit.ly/375r0Ha" alt="_blank" >Aprann Dekode</a></li>
                 <li><a href="https://www.youtube.com/channel/UCtQeR3BnSgwJt4vkQJS_sFg/videos" target="_blank">My YouTube Channel</a></li>
@@ -138,7 +138,7 @@
     <section class="container">
     <div class="container">
     <header class="major">
-    <h2>DOWNLOADS
+    <h2 id="download#1">DOWNLOADS
     </h2>
     <p>Stay tuned we are workin hard everyday to bring you Useful ToolS</p>
      <hr>
@@ -161,67 +161,82 @@
     <th scope="row">1</th>
     <td>Samsung</td>
     <td>driver</td>
-    <td><a href="DRIVERS/SAMSUNG_USB_Driver_for_Mobile_Phones.exe"> Download</a></td>
+    <td><a href="DRIVERS/SAMSUNG DRIVERS/"> Download</a></td>
     </tr>
  <tr>
        <th scope="row">2</th>
         <td>LG</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/LG DRIVERS/"> Download</a></td>
         <tr>
         <th scope="row">3</th>
         <td>Motorola</td>
         <td>driver</td>
-        <td><a href="DRIVERS/Motorola_Mobile_Drivers_64bit.msi"> Download</a></td>
+        <td><a href="DRIVERS/MOTOROLA DRIVERS/"> Download</a></td>
         </tr>
         <tr>
         <th scope="row">4</th>
         <td>Zte</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/ZTE DRIVERS/"> Download</a></td>
         <tr>
         <th scope="row">5</th>
-        <td>Sony</td>
+        <td>DCSD Drivers(iphone)</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/DCSD DRIVERS.rar"> Download</a></td>
         </tr>
         <tr>
         <th scope="row">6</th>
         <td>Huawei</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/HUAWEI DRIVERS/"> Download</a></td>
         <tr>
         <th scope="row">7</th>
         <td>Alcatel</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/ALCATEL DRIVERS/"> Download</a></td>
         </tr>
         <tr>
         <th scope="row">8</th>
-        <td>Coolpad</td>
+        <td>Visual C-Runtimes</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/VISUAL C-RUNTIMES/"> Download</a></td>
         <tr>
         <th scope="row">9</th>
         <td>Htc</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/HTC DRIVERS/"> Download</a></td>
         </tr>
         <tr>
         <th scope="row">10</th>
-        <td>Kyocera</td>
+        <td>USB Redirector</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/USB+REDIRECTOR+1.9.7 (5).ra"> Download</a></td>
          <tr>
         <th scope="row">11</th>
         <td>Mediatek</td>
         <td>driver</td>
-        <td><a href=""> Download</a></td>
+        <td><a href="DRIVERS/MEDIATEK DRIVERS/"> Download</a></td>
         <tr>
          <th scope="row">12</th>
          <td>Spd</td>
          <td>driver</td>
-         <td><a href=""> Download</a></td>
+         <td><a href="DRIVERS/SPRD DRIVERS"> Download</a></td>
+         <tr>
+            <th scope="row">13</th>
+            <td>ALL DRIVERS DOWNLOADS</td>
+            <td>driver</td>
+            <td><a href="DRIVERS/"> Download</a></td>
+            <tr>
+                <th scope="row">14</th>
+                <td>USB DISK</td>
+                <td>driver</td>
+                <td><a href="DRIVERS/LIBUSB/"> Download</a></td>
+                <tr>
+                    <th scope="row">15</th>
+                    <td>ADB DRIVERS</td>
+                    <td>driver</td>
+                    <td><a href="DRIVERS/ADB DRIVERS/"> Download</a></td>
          </tr>
         </tbody>
         </table>
@@ -233,18 +248,18 @@
         
         <tbody>
         <tr>
-        <td><a href=""></a>download</td>
-        <td><a href=""></a>download</td>
-        <td><a href=""></a>download</td>
+        <td><a href=""></a>Pandora Box</td>
+        <td><a href=""></a>Unlocktool</td>
+        <td><a href=""></a>NCK Box</td>
         </tr>
         <tr>
-        <td><a href=""></a>download</td>
-        <td><a href=""></a>download</td>
-        <td><a href=""></a>download</td>
+        <td><a href=""></a>Global Unlock</td>
+        <td><a href=""></a>Sim unlocker</td>
+        <td><a href=""></a>UFS Box</td>
          <tr>
-        <td><a href=""></a>download</td>
-        <td><a href=""></a>download</td>
-        <td><a href=""></a>download</td>
+        <td><a href=""></a>GCPro Box</td>
+        <td><a href=""></a>Advanger Box</td>
+        <td><a href=""></a>T-Unlock</td>
         </tr>
  <tr>
 </tbody>
