--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="container">
         <div class="container">
             <header class="major">
-                <h2>FRP_BYPASS
+                <h2>FRP_BYPASS_APK & Direct Open APPS
                 </h2>
                 <p>you can download all necesary files here to remove FRPLOCK!</p>
                 <hr>
@@ -245,7 +245,7 @@
     <br>
     <h2 class="#">USEFUL LINK!</h2>
     <table class="table table-striped ">
-        
+        <p>These Links Are Box Software Utilities & Activation Softwares</p>
         <tbody>
         <tr>
         <td><a href=""></a>Pandora Box</td>
