--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="download#1">Downloads</a></li>
                 <li><a href="index.html">Paid Files</a></li>
-                <li><a href="https://bit.ly/375r0Ha" alt="_blank" >Aprann Dekode</a></li>
+                <li><a href="https://bit.ly/375r0Ha" target="_blank" >Aprann Dekode</a></li>
                 <li><a href="https://www.youtube.com/channel/UCtQeR3BnSgwJt4vkQJS_sFg/videos" target="_blank">My YouTube Channel</a></li>
                 <li><a href="https://www.tiktok.com/@deblokemvit?is_from_webapp=1&sender_device=pc" target="_blank">My TikTok</a></li>
                 <!--<li><a href="#" class="button special">Sign Up</a></li>-->
@@ -243,23 +243,24 @@
     </header>
     </di>
     <br>
+    <!--link to usefull boxes-->
     <h2 class="#">USEFUL LINK!</h2>
     <table class="table table-striped ">
         <p>These Links Are Box Software Utilities & Activation Softwares</p>
         <tbody>
         <tr>
-        <td><a href=""></a>Pandora Box</td>
-        <td><a href=""></a>Unlocktool</td>
-        <td><a href=""></a>NCK Box</td>
+        <td><a href="" target="_blank"></a>Pandora Box</td>
+        <td><a href="" target="_blank"> </a>Unlocktool</td>
+        <td><a href="" target="_blank"></a>NCK Box</td>
         </tr>
         <tr>
-        <td><a href=""></a>Global Unlock</td>
-        <td><a href=""></a>Sim unlocker</td>
-        <td><a href=""></a>UFS Box</td>
+        <td><a href="" target="_blank"></a>Global Unlock</td>
+        <td><a href="" target="_blank"></a>Sim unlocker</td>
+        <td><a href="" target="_blank"></a>UFS Box</td>
          <tr>
-        <td><a href=""></a>GCPro Box</td>
-        <td><a href=""></a>Advanger Box</td>
-        <td><a href=""></a>T-Unlock</td>
+        <td><a href="" target="_blank"></a>GCPro Box</td>
+        <td><a href="" target="_blank"></a>Advanger Box</td>
+        <td><a href="" target="_blank"></a>T-Unlock</td>
         </tr>
  <tr>
 </tbody>
