--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="download#1">Downloads</a></li>
                 <li><a href="index.html">Paid Files</a></li>
-                <li><a href="https://bit.ly/375r0Ha" target="_blank" >Aprann Dekode</a></li>
+                <li><a href="https://bit.ly/375r0Ha" target="_blank">Aprann Dekode</a></li>
                 <li><a href="https://www.youtube.com/channel/UCtQeR3BnSgwJt4vkQJS_sFg/videos" target="_blank">My YouTube Channel</a></li>
                 <li><a href="https://www.tiktok.com/@deblokemvit?is_from_webapp=1&sender_device=pc" target="_blank">My TikTok</a></li>
                 <!--<li><a href="#" class="button special">Sign Up</a></li>-->
@@ -255,6 +255,29 @@
         </tr>
         <tr>
         <td><a href="" target="_blank"></a>Global Unlock</td>
+        <td><a href="" target="_blank"></a>Sim unlocker</td>
+        <td><a href="" target="_blank"></a>UFS Box</td>
+         <tr>
+        <td><a href="" target="_blank"></a>GCPro Box</td>
+        <td><a href="" target="_blank"></a>Advanger Box</td>
+        <td><a href="" target="_blank"></a>T-Unlock</td>
+        </tr>
+ <tr>
+</tbody>
+</table>
+<br>
+    <!--link to Paids files-->
+    <h2 class="#">PAIDS FILES!</h2>
+    <table class="table table-striped ">
+        <p>These Links Are Box Software Utilities & Activation Softwares</p>
+        <tbody>
+        <tr>
+        <td><a href="" target="_blank"></a>Samsung Unlock Files</td>
+        <td><a href="" target="_blank"> </a>LG Unlock files</td>
+        <td><a href="" target="_blank"></a>Unlock Solutions</td>
+        </tr>
+        <tr>
+        <td><a href="" target="_blank"></a>Frp Solutions</td>
         <td><a href="" target="_blank"></a>Sim unlocker</td>
         <td><a href="" target="_blank"></a>UFS Box</td>
          <tr>
