--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <tr>
         <th scope="row">8</th>
         <td>Visual C-Runtimes</td>
-        <td>driver</td>
+        <td>programm</td>
         <td><a href="DRIVERS/VISUAL C-RUNTIMES/"> Download</a></td>
         <tr>
         <th scope="row">9</th>
@@ -210,7 +210,7 @@
         <tr>
         <th scope="row">10</th>
         <td>USB Redirector</td>
-        <td>driver</td>
+        <td>programm</td>
         <td><a href="DRIVERS/USB+REDIRECTOR+1.9.7 (5).ra"> Download</a></td>
          <tr>
         <th scope="row">11</th>
