ADD EXTENSION TO ALL FILES
FILE TO RAR

--- a/index.html
+++ b/index.html
@@ -161,24 +161,24 @@
     <th scope="row">1</th>
     <td>Samsung</td>
     <td>driver</td>
-    <td><a href="DRIVERS/SAMSUNG DRIVERS/"> Download</a></td>
+    <td><a href="DRIVERS/SAMSUNG DRIVERS.rar"> Download</a></td>
     </tr>
  <tr>
        <th scope="row">2</th>
         <td>LG</td>
         <td>driver</td>
-        <td><a href="DRIVERS/LG DRIVERS/"> Download</a></td>
+        <td><a href="DRIVERS/LG DRIVERS.rar"> Download</a></td>
         <tr>
         <th scope="row">3</th>
         <td>Motorola</td>
         <td>driver</td>
-        <td><a href="DRIVERS/MOTOROLA DRIVERS/"> Download</a></td>
+        <td><a href="DRIVERS/MOTOROLA DRIVERS.rar"> Download</a></td>
         </tr>
         <tr>
         <th scope="row">4</th>
         <td>Zte</td>
         <td>driver</td>
-        <td><a href="DRIVERS/ZTE DRIVERS/"> Download</a></td>
+        <td><a href="DRIVERS/ZTE DRIVERS.rar"> Download</a></td>
         <tr>
         <th scope="row">5</th>
         <td>DCSD Drivers(iphone)</td>
@@ -189,54 +189,54 @@
         <th scope="row">6</th>
         <td>Huawei</td>
         <td>driver</td>
-        <td><a href="DRIVERS/HUAWEI DRIVERS/"> Download</a></td>
+        <td><a href="DRIVERS/HUAWEI DRIVERS.rar"> Download</a></td>
         <tr>
         <th scope="row">7</th>
         <td>Alcatel</td>
         <td>driver</td>
-        <td><a href="DRIVERS/ALCATEL DRIVERS/"> Download</a></td>
+        <td><a href="DRIVERS/ALCATEL DRIVERS.rar"> Download</a></td>
         </tr>
         <tr>
         <th scope="row">8</th>
         <td>Visual C-Runtimes</td>
         <td>programm</td>
-        <td><a href="DRIVERS/VISUAL C-RUNTIMES/"> Download</a></td>
+        <td><a href="DRIVERS/VISUAL C-RUNTIMES.rar"> Download</a></td>
         <tr>
         <th scope="row">9</th>
         <td>Htc</td>
         <td>driver</td>
-        <td><a href="DRIVERS/HTC DRIVERS/"> Download</a></td>
+        <td><a href="DRIVERS/HTC DRIVERS.rar"> Download</a></td>
         </tr>
         <tr>
         <th scope="row">10</th>
         <td>USB Redirector</td>
         <td>programm</td>
-        <td><a href="DRIVERS/USB+REDIRECTOR+1.9.7 (5).ra"> Download</a></td>
+        <td><a href="DRIVERS/USB+REDIRECTOR+1.9.7 (5).rar"> Download</a></td>
          <tr>
         <th scope="row">11</th>
         <td>Mediatek</td>
         <td>driver</td>
-        <td><a href="DRIVERS/MEDIATEK DRIVERS/"> Download</a></td>
+        <td><a href="DRIVERS/MEDIATEK DRIVERS.rar"> Download</a></td>
         <tr>
          <th scope="row">12</th>
          <td>Spd</td>
          <td>driver</td>
-         <td><a href="DRIVERS/SPRD DRIVERS"> Download</a></td>
+         <td><a href="DRIVERS/SPRD DRIVERS.rar"> Download</a></td>
          <tr>
             <th scope="row">13</th>
             <td>ALL DRIVERS DOWNLOADS</td>
             <td>driver</td>
-            <td><a href="DRIVERS/"> Download</a></td>
+            <td><a href="DRIVERS/ALL DRIVERS.rar"> Download</a></td>
             <tr>
                 <th scope="row">14</th>
                 <td>USB DISK</td>
                 <td>driver</td>
-                <td><a href="DRIVERS/LIBUSB/"> Download</a></td>
+                <td><a href="DRIVERS/LIBUSB.rar"> Download</a></td>
                 <tr>
                     <th scope="row">15</th>
                     <td>ADB DRIVERS</td>
                     <td>driver</td>
-                    <td><a href="DRIVERS/ADB DRIVERS/"> Download</a></td>
+                    <td><a href="DRIVERS/ADB DRIVERS.rar"> Download</a></td>
          </tr>
         </tbody>
         </table>
