--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--METE DESCRIPTION-->
     <meta name="description" content="The website's made for downloading all latest Apk file to bypass Google account lock on android smartphone" />
     <!--META KEYWORDS-->
-    <meta name="keywords" content="frp, bypass, google account, factory reset protection, Screenlock, frp bypass, frp lock, google id, frp removal, screenlock removal, samsung account, samsung account removal, apk, bit.ly, frp509, google id, deblokemvit, deblokemvit.tk, deblokemvit.com, icloud, icloud unlock, icloud activasion" />
+    <meta name="keywords" content="frp, bypass, google account, factory reset protection, Screenlock, frp bypass, frp lock, google id, frp removal, screenlock removal, samsung account, samsung account removal, apk, bit.ly, frp509, google id, deblokemvit, deblokemvit.tk, deblokemvit.com, icloud, icloud unlock, icloud activasion, douvajurolien, juroliendouva, unlocker, deblokem, deblokemvitunlocker" />
     <!--META AUTHOR-->
     <meta name="author" content=" Jurolien Douva" />
 
