--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <p>These Links Are Box Software Utilities & Activation Softwares</p>
         <tbody>
         <tr>
-        <td><a href="DRIVERS/LGBackup_2.7z" target="_blank"></a>LG Backup</td>
+        <td><a href="https://drive.google.com/file/d/1KT5cfjuctBd09tkpgjHs7PA2x3i8kDBu/view?usp=sharing" target="_blank"></a>LG Backup</td>
         <td><a href="" target="_blank"> </a>Unlocktool</td>
         <td><a href="" target="_blank"></a>NCK Box</td>
         </tr>
